--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "cryptosniper-api",
+  "name": "cryptosniper-api-vercel",
   "version": "1.0.0",
-  "description": "Simple API for DEX Screener alerts",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "vercel dev"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "express": "^4.18.2"
+    "axios": "^1.6.7"
   }
 }
